encrypt-pre-alpha/chains/solana/program-sdk/dsl/tests/compile_fail/unsupported_method.rs
// Copyright (c) dWallet Labs, Ltd.
// SPDX-License-Identifier: BSD-3-Clause-Clear

use encrypt_dsl::prelude::*;

#[encrypt_fn_graph]
fn bad(a: EUint32, b: EUint32) -> EUint32 {
    let x = a.foobar(&b);
    x
}

fn main() {}
