encrypt-pre-alpha/chains/solana/program-sdk/dsl/tests/compile_fail/unsupported_method.stderr
error: unsupported FHE method `foobar`
 --> tests/compile_fail/unsupported_method.rs:8:15
  |
8 |     let x = a.foobar(&b);
  |               ^^^^^^
